--- a/index.html
+++ b/index.html
@@ -3,15 +3,13 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/src/Assets/logo.svg" />
+  <link rel="icon" type="image/svg+xml" href="/src/Assets/Logo.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Luigi Uchiyama</title>
 </head>
 
 <body>
-  <div id="root">
-
-  </div>
+  <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
 
