novas funcoes de pesquisas

--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
   <link rel="icon" type="image/svg+xml" href="/src/Assets/favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Desenvolvimento de sites personalizados para empresas que buscam aumentar suas vendas e melhorar a visibilidade online. Ofereço criação de sites profissionais, responsivos e de fácil navegação, com foco em destacar a identidade e as necessidades do cliente. Também realizo manutenção de sites e garantido que seu negócio esteja sempre atualizado e funcional." />
+
+  <!-- Open Graph Tags -->
+  <meta property="og:title" content="Luigi Uchiyama - Desenvolvimento de Sites Profissionais">
+  <meta property="og:description" content="Criação de sites personalizados para empresas, com foco em aumentar vendas e visibilidade online. Manutenção de sites e garantia de que seu negócio esteja sempre atualizado." />
+  <meta property="og:image" content="/src/Assets/openGraph.jpg" />
+  <meta property="og:url" content="https://luigiuchiyama.com" />
+  <meta property="og:type" content="website">
+
+  <!-- Author Tag -->
+  <meta name="author" content="Luigi Uchiyama">
+
+  <!-- Robots Tag -->
+  <meta name="robots" content="index, follow">
+
   <title>Luigi Uchiyama</title>
 </head>
 
