--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/src/Assets/favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Desenvolvimento de sites personalizados para empresas que buscam aumentar suas vendas e melhorar a visibilidade online. Ofereço criação de sites profissionais, responsivos e de fácil navegação, com foco em destacar a identidade e as necessidades do cliente. Também realizo manutenção de sites e garantido que seu negócio esteja sempre atualizado e funcional." />
+  <meta name="description" content="Desenvolvimento de sites personalizados para aumentar visibilidade e vendas online. Ofereço criação de sites profissionais, responsivos e de fácil navegação, com foco em destacar a identidade e as necessidades do cliente." />
 
   <!-- Open Graph Tags -->
   <meta property="og:title" content="Luigi Uchiyama - Desenvolvimento de Sites Profissionais">
