--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/src/Assets/favicon.svg" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Desenvolvimento de sites personalizados para aumentar visibilidade e vendas online. Ofereço criação de sites profissionais, responsivos e de fácil navegação, com foco em destacar a identidade e as necessidades do cliente." />
 
   <!-- Open Graph Tags -->
   <meta property="og:title" content="Luigi Uchiyama - Desenvolvimento de Sites Profissionais">
   <meta property="og:description" content="Criação de sites personalizados para empresas, com foco em aumentar vendas e visibilidade online. Manutenção de sites e garantia de que seu negócio esteja sempre atualizado." />
-  <meta property="og:image" content="/src/Assets/openGraph.jpg" />
+  <meta property="og:image" content="/openGraph.jpg" />
   <meta property="og:url" content="https://luigiuchiyama.com" />
   <meta property="og:type" content="website">
 
